<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:card_view="http://schemas.android.com/apk/res-auto"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="5dp">

	<android.support.v7.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		card_view:cardUseCompatPadding="true"
		card_view:cardElevation="2dp"
		card_view:cardCornerRadius="4dp"
		card_view:contentPadding="16dp"
		card_view:cardBackgroundColor="@color/rowBackground">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="horizontal">

				<ImageButton
					style="?android:attr/buttonBarButtonStyle"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:src="@drawable/ic_history"
					android:id="@+id/btn_history_search"/>

				<android.support.design.widget.TextInputLayout
					android:id="@+id/title_query_input"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1.0"
					card_view:hintTextAppearance="?android:attr/textAppearanceMedium"
					card_view:errorEnabled="true">

					<AutoCompleteTextView
						android:id="@+id/query_input"
						android:layout_width="match_parent"
						android:capitalize="none"
						android:layout_height="wrap_content"
						android:singleLine="true"
						android:textAppearance="?android:attr/textAppearanceMedium"
						android:hint="@string/search_hint"
						android:completionThreshold="2"
						android:imeOptions="flagNoExtractUi|actionSearch"/>

				</android.support.design.widget.TextInputLayout>

				<ImageButton
					style="?android:attr/buttonBarButtonStyle"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:src="@drawable/ic_close"
					android:id="@+id/btn_clear_search"/>

				<ImageButton
					style="?android:attr/buttonBarButtonStyle"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:src="@drawable/ic_magnify"
					android:id="@+id/btn_search"
					android:layout_marginLeft="5dp"/>

			</LinearLayout>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="horizontal"
				android:gravity="center_horizontal"
				android:id="@+id/search_text_options">

				<CheckBox
					android:layout_height="match_parent"
					android:layout_width="wrap_content"
					android:text="@string/label_ic"
					android:id="@+id/cb_ic"
					android:layout_weight="1.0"/>

				<CheckBox
					android:layout_height="match_parent"
					android:layout_width="wrap_content"
					android:text="@string/label_re"
					android:id="@+id/cb_re"
					android:layout_marginLeft="10dp"
					android:layout_weight="1.0"/>

			</LinearLayout>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="horizontal"
				android:gravity="center_horizontal"
				android:id="@+id/search_text_options">

				<CheckBox
					android:layout_height="match_parent"
					android:layout_width="wrap_content"
					android:id="@+id/cb_mw"
					android:text="@string/label_mw"
					android:layout_marginLeft="10dp"
					android:layout_weight="1.0"/>

				<CheckBox
					android:layout_height="match_parent"
					android:layout_width="wrap_content"
					android:id="@+id/cb_hidden"
					android:text="@string/label_hidden"
					android:layout_marginLeft="10dp"
					android:layout_weight="1.0"/>

			</LinearLayout>

		</LinearLayout>

	</android.support.v7.widget.CardView>

	<ScrollView
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:layout_weight="1.0">

		<LinearLayout
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:orientation="vertical">

			<android.support.v7.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				card_view:cardUseCompatPadding="true"
				card_view:cardElevation="2dp"
				card_view:cardCornerRadius="4dp"
				card_view:contentPadding="16dp"
				card_view:cardBackgroundColor="@color/rowBackground">

				<LinearLayout
					android:layout_height="match_parent"
					android:layout_width="match_parent"
					android:orientation="vertical">

					<LinearLayout
						android:layout_height="wrap_content"
						android:layout_width="match_parent"
						android:orientation="horizontal">

						<ImageButton
							style="?android:attr/buttonBarButtonStyle"
							android:layout_height="wrap_content"
							android:layout_width="wrap_content"
							android:src="@drawable/ic_clear_all_white_24dp"
							android:id="@+id/btn_clear_dir"/>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_gravity="left|center_vertical"
							android:text="@string/label_dir"
							android:textAppearance="?android:attr/textAppearanceMedium"
							android:layout_marginTop="5dp"
							android:layout_weight="1.0"
							android:layout_marginLeft="5dp"/>

					</LinearLayout>

					<View
						android:layout_width="fill_parent"
						android:layout_height="1dp"
						android:background="@color/colorAccent"
						android:layout_marginBottom="10dp"
						android:layout_marginTop="10dp"/>

					<LinearLayout
						android:id="@+id/listdir"
						android:paddingLeft="20dp"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical"
						android:layout_marginTop="5dp"
						android:gravity="top|left"/>

				</LinearLayout>

			</android.support.v7.widget.CardView>

			<android.support.v7.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				card_view:cardUseCompatPadding="true"
				card_view:cardElevation="2dp"
				card_view:cardCornerRadius="4dp"
				card_view:contentPadding="16dp"
				card_view:cardBackgroundColor="@color/rowBackground">

				<LinearLayout
					android:layout_height="match_parent"
					android:layout_width="match_parent"
					android:orientation="vertical">

					<LinearLayout
						android:layout_height="wrap_content"
						android:layout_width="match_parent"
						android:orientation="horizontal">

						<ImageButton
							style="?android:attr/buttonBarButtonStyle"
							android:layout_height="wrap_content"
							android:layout_width="wrap_content"
							android:src="@drawable/ic_clear_all_white_24dp"
							android:id="@+id/btn_clear_ext"/>

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_gravity="left|center_vertical"
							android:text="@string/label_ext"
							android:textAppearance="?android:attr/textAppearanceMedium"
							android:layout_marginTop="10dp"/>

					</LinearLayout>

					<View
						android:layout_width="fill_parent"
						android:layout_height="1dp"
						android:background="@color/colorAccent"/>

					<LinearLayout
						android:id="@+id/listext"
						android:paddingLeft="20dp"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical"
						android:layout_marginTop="5dp"
						android:gravity="top|left"/>

				</LinearLayout>

			</android.support.v7.widget.CardView>

		</LinearLayout>

	</ScrollView>

</LinearLayout>

